correction erreurs contraste

--- a/style.css
+++ b/style.css
@@ -651,7 +651,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #000000!important;
 }
 
 .container {
@@ -785,6 +785,16 @@ h4 {
 }
 
 .btn-atomic-tangerine:hover {
+    background: #c27956!important;
+    color: #FFFFFF!important;
+}
+
+.btn-atomic-tangerine2 {
+    background: #F3976C;
+    color: #000000!important;
+}
+
+.btn-atomic-tangerine2:hover {
     background: #c27956!important;
     color: #FFFFFF!important;
 }
